--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
-    "winwheel": "^1.0.1"
+    "styled-components": "^6.0.0-rc.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
